# code-explorer

./: CLAUDE.md  README.md  cli.py  cli_runner.py  config.py  pyproject.toml  repo_manager.py  server.py
.github/workflows/: publish.yml
code_explorer/: __init__.py  cli.py  cli_runner.py  config.py  repo_manager.py  server.py  session_store.py
tests/: test_cli.py  test_cli_runner.py  test_config.py  test_repo_manager.py  test_server.py  test_session_store.py
